2009-02-05  Andy Buckley  <andy@insectnation.org>

	* Removing ROOT dependency and linking. Woo! There's no need for
	this now, because the front-end accepts no histo format switch and
	we'll just use aida2root for output conversions. Simpler this way,
	and it avoids about half of our compilation bug reports from 32/64
	bit ROOT build confusions.

2009-02-04  Andy Buckley  <andy@insectnation.org>

	* Adding automatic generation of LaTeX manual entries for the
	standard analyses.

2009-01-20  Andy Buckley  <andy@insectnation.org>

	* Removing RivetGun and TCLAP source files!

2009-01-19  Andy Buckley  <andy@insectnation.org>

	* Added psyco Python optimiser to rivet, make-plots and compare-histos.

	* bin/aida2root: Added "-" -> "_" mangling, following requests.

2009-01-17  Andy Buckley  <andy@insectnation.org>

	* 1.1.3 release.

2009-01-15  Andy Buckley  <andy@insectnation.org>

	* Converting Python build system to bundle SWIG output in tarball.

2009-01-14  Andy Buckley  <andy@insectnation.org>

	* Converting AIDA/LWH divide function to return a DPS so that bin
	width factors don't get all screwed up. Analyses adapted to use
	the new division operation (a DPS/DPS divide would also be
	nice... but can wait for YODA).

2009-01-06  Andy Buckley  <andy@insectnation.org>

	* bin/make-plots: Added --png option for making PNG output files,
	using 'convert' (after making a PDF --- it's a bit messy)

	* bin/make-plots: Added --eps option for output filtering through
	ps2eps.

2009-01-05  Andy Buckley  <andy@insectnation.org>

	* Python: reworking Python extension build to use distutils and
	newer m4 Python macros. Probably breaks distcheck but is otherwise
	more robust and platform independent (i.e. it should now work on
	Macs).

2008-12-19  Andy Buckley  <andy@insectnation.org>

	* make-plots: Multi-threaded make-plots and cleaned up the LaTeX
	building a bit (necessary to remove the implicit single global
	state).

2008-12-18  Andy Buckley  <andy@insectnation.org>
