@@ -1,6 +1,7 @@
 #ifndef RIVET_Rivet_HH
 #define RIVET_Rivet_HH
 
+#include "Rivet/Config/RivetConfig.hh"
 #include "Rivet/Config/BuildOptions.hh"
 
 #include <typeinfo>
@@ -58,6 +59,8 @@ namespace Rivet {
   /// A sensible default maximum value of rapidity for Rivet analyses to use.
   static const double MaxRapidity = 100000.0;
 
+  /// A function to get the Rivet version string
+  string version();
 
 }
 
